--- a/index.html
+++ b/index.html
@@ -1,27 +1,39 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página principal</title>
-    <link rel="stylesheet" href="style.css">
-
     <head>
-
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Página principal</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
     <body>
-        <header class="cabecalho" <h1>Vai ser uma imagem </h1>
+        <header class="cabecalho">
+            <img  class="cabecalho-imagem"  src="img/alurastart.png" alt="logo AluraStart">
 
-            <ul class="cabecalho-lista">
-                <li class="cabecalho-lista-item">Escola</li>
-                <li class="cabecalho-lista-item">Estudantes</li>
+            <ul class="cabecalho-lista"  >
+                <li class="cabecalho-lista-item" >Escola</li>
+                <li class="cabecalho-lista-item" >Estudantes</li>
             </ul>
         </header>
 
+        <section class="escola">
+            <div class="escola-div-conteudo">
+                <h2 class="escola-titulo"> Sobre a Escola </h2>
+                <p class="escola-texto-um"> A Escola Alura foi fundada em 2010 e tem como objetivo ensinar Pensamento Computacional, através de Programação. </p>
+                <p class="escola-texto-dois">A turma mais estudiosa e famosa é a segunda série, turma E. Nós somos super unidos e a turma favorita por todos os professores que nos ajudam!</p>
+            </div>
+            <img src="img/" alt="imagem da escola" class="escola-imagem">
 
-        <h1>Yasmin Pontes Correia</h1>
+        </section>
+       
 
+        <section class="estudante">
+          <h2 class="estudante-titulo">Quem sou</h2>
+          <img src="img/yasmin" alt="foto da yasmin" class="estudante-imagem">
+          <h3 class="estudante-nome">yasmin correia
+          </h3>
+        </section>
 
+       
     </body>
-
 </html>
