--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <header class="cabecalho">
-            <img  class="cabecalho-imagem"  src="img/alurastart.png" alt="logo AluraStart">
+            <img  class="cabecalho-imagem"  src="img/alurastart_logo.png" alt="logo AluraStart">
 
             <ul class="cabecalho-lista"  >
                 <li class="cabecalho-lista-item" >Escola</li>
@@ -29,10 +29,15 @@
 
         <section class="estudante">
           <h2 class="estudante-titulo">Quem sou</h2>
-          <img src="img/yasmin" alt="foto da yasmin" class="estudante-imagem">
-          <h3 class="estudante-nome">yasmin correia
-          </h3>
-        </section>
+          <div class="estudante-iv">
+            <img src="img/yasmin" alt="foto da yasmin" class="estudante-imagem">
+            <h3 class="estudante-nome">yasmin correia </h3>
+          <img src="img/placa-do-github.png" alt="icone do github" class="estudane-icone">
+          <img src="img/instagram.png" alt="icone do instagram" class="estudane-icone">
+          <img src="img/whatsapp.png" alt="icone do whatsapp" class="estudane-icone">
+  
+          </div>
+          
 
        
     </body>
